# MPOPI_ws

./: .gitignore  README.md  bridge.sh  build.sh  camera.sh  driving_mode_ui.sh  init_setting.sh  lattice_planner.sh  lidar.sh  lidar_static_tf.sh  map_to_baselink.sh  path_maker.cpp  path_recorder.cpp  rqt_tree.sh  rviz_visualization.sh  start_build.sh  visualization_2_rviz.rviz  visualization_rviz.rviz
devel/: .catkin
devel/include/jsk_recognition_msgs/: PolygonArray.h
devel/include/morai_msgs/: NpcGhostCmd.h  NpcGhostInfo.h
devel/lib/Lidar/: Lidar
devel/lib/ackermann_cmd_mux/: throttle_interpolator.py
devel/lib/carvision/: avoid_camera_car  avoid_lidar_car  convert_lidar_car  obstacle_detector_car
devel/lib/lattice_planner_morai/: lidar_costmap_generator
devel/lib/lattice_test/: lattice_test_node
devel/lib/patchworkpp/: demo  offline_kitti  video
devel/lib/pkgconfig/: Lidar.pc  ackermann_cmd_mux.pc  carvision.pc  jsk_recognition_msgs.pc  lattice_planner_morai.pc  lattice_test.pc  morai_msgs.pc  patchworkpp.pc  racecar.pc  roscpp_morai.pc  winter_contest.pc
devel/lib/python3/dist-packages/morai_msgs/msg/: _NpcGhostCmd.py  _NpcGhostInfo.py
devel/lib/roscpp_morai/: cluster_car_detection  gps_gamming_perception  hybrid  lidar_aabb_costmap_node  lidar_aabb_costmap_node_ver2  lidar_aabb_costmap_node_ver3  only_lattice_planner_node  only_lattice_planner_node_ver2  path_recorder
devel/lib/winter_contest/: winter_contest
devel/share/Lidar/cmake/: LidarConfig.cmake
devel/share/ackermann_cmd_mux/cmake/: ackermann_cmd_muxConfig.cmake
devel/share/carvision/cmake/: carvisionConfig.cmake
devel/share/common-lisp/ros/morai_msgs/msg/: NpcGhostCmd.lisp  NpcGhostInfo.lisp  _package_NpcGhostInfo.lisp
devel/share/gennodejs/ros/morai_msgs/msg/: NpcGhostCmd.js  NpcGhostInfo.js  _index.js
devel/share/gennodejs/ros/morai_msgs/srv/: _index.js
devel/share/jsk_recognition_msgs/cmake/: jsk_recognition_msgs-msg-paths.cmake  jsk_recognition_msgsConfig.cmake
devel/share/lattice_planner_morai/cmake/: lattice_planner_moraiConfig.cmake
devel/share/lattice_test/cmake/: lattice_testConfig.cmake
devel/share/morai_msgs/cmake/: morai_msgs-msg-paths.cmake  morai_msgsConfig.cmake
devel/share/patchworkpp/cmake/: patchworkppConfig.cmake
devel/share/racecar/cmake/: racecarConfig.cmake
devel/share/roscpp_morai/cmake/: roscpp_moraiConfig.cmake
devel/share/roseus/ros/morai_msgs/: manifest.l
devel/share/roseus/ros/morai_msgs/msg/: NpcGhostCmd.l  NpcGhostInfo.l
devel/share/roseus/ros/patchworkpp/: manifest.l
devel/share/winter_contest/cmake/: winter_contestConfig.cmake
docker-noetic/: Dockerfile  docker-compose.pc.yaml  readme.txt
log/: latest_build
src/main/config/: No_CameraCostmap_zone.csv  No_LidarCostmap_zone.csv  overtaking_zone.csv  path_new.csv  track_log_recorded_final.csv  yaml_hybrid.yaml
src/main/scripts/: driving_mode_ui.py
src/main/src/Camera/: CMakeLists.txt  Camera.py  bev_test.py  camera.launch  camera_costmap.cpp  package.xml
src/main/src/Lidar/: CMakeLists.txt  Lidar_main.cpp
src/main/src/Lidar/Costmap/: Costmap.cpp  Costmap.hpp
src/main/src/Lidar/Euclidean/: Euclidean.cpp  Euclidean.hpp
src/main/src/Lidar/Global/: Global.hpp
src/main/src/Lidar/Hungarian/: Hungarian.cpp
src/main/src/Lidar/Kalman/: Kalman.cpp  Kalman.hpp  calculate.cpp  main.cpp  process.cpp  tool.cpp
src/main/src/Lidar/LidarProcess/: LidarProcess.cpp  LidarProcess.hpp
src/main/src/Lidar/Lshapefitting/: Lshapefitting.cpp  Lshapefitting.hpp
src/main/src/Lidar/Ransac/: Ransac.cpp  Ransac.hpp
src/main/src/Lidar/RoiVoxel/: RoiVoxel.cpp  RoiVoxel.hpp
src/main/src/Lidar/Visualizer/: Visualizer.cpp  Visualizer.hpp
src/main/src/PlanningControl/: CMakeLists.txt  LatticePlanning.cpp  Planning.hpp  Util_Coordinates.cpp  control.cpp  main.cpp  package.xml
src/main/src/PlanningControl/Control/: Control.cpp  Control.hpp
src/main/src/PlanningControl/Global/: Global.cpp  Global.hpp  parameter_loader.cpp  parameter_loader.hpp
src/main/src/PlanningControl/Jamming/: JammingPlanning.cpp
src/main/src/PlanningControl/Lattice/control/: control.cpp
src/main/src/PlanningControl/Lattice/planning/: LatticePlanning.cpp  Util_Coordinates.cpp
src/main/src/PlanningControl/Planning/: JammingPlanning.cpp  LatticePlanning.cpp  Planning.hpp  Util_Coordinates.cpp  mpopisPlanning.cpp
src/main/src/PlanningControl/Visualizer/: Visualizer.cpp  Visualizer.hpp
src/main/src/PlanningControl/global/: Planning.hpp  global.hpp
src/main/src/PlanningControl/include/: Planning.hpp  global.hpp
src/main/src/PlanningControl/src/: Baseplanning.cpp  JammingPlanning.cpp  LatticePlanning.cpp  Planning.cpp  Util_Coordinates.cpp  control.cpp  main.cpp
src/main/src/camera/: camera.py
src/main/src/control/: gps_enu_path_recorder.cpp
src/main/src/decision/candidate_generation/: candidate_generation.hpp
src/main/src/decision/collision/: collision.hpp
src/main/src/decision/cost/: cost.cpp
src/main/src/decision/global/: global.hpp
src/main/src/decision/lattice_planner_process/: lattice_planning_process.cpp
src/main/src/gps/: CMakeLists.txt  package.xml
src/main/src/gps/src/: gps_control.cpp
src/main/src/path_recorder/: CMakeLists.txt  package.xml  path_recorder.cpp
src/main/src/perception/Lidar/Euclidean/: Euclidean.cpp
src/main/src/planning/: LatticePlanning.cpp  Util_Coordinates.cpp
src/main/src/planning/global/: global.hpp
src/roscpp_morai/config/: yaml_hybrid.yaml
src/roscpp_morai/src/Global/: Global.hpp
src/roscpp_morai/src/decision/candidate_generation/: candidate_generation.cpp
src/roscpp_morai/src/decision/collision/: collision.cpp
src/roscpp_morai/src/decision/coordinate/: coordinate.hpp
src/roscpp_morai/src/decision/cost/: cost.hpp
src/roscpp_morai/src/perception/Lidar/: main.cpp
src/roscpp_morai/src/perception/lidar/: lidar_aabb_costmap_node_ver3.cpp
src/winter_contest/src/Lidar/Kalman/: process.cpp
src/winter_contest/src/Lidar/LidarProcess/: LidarProcess.hpp
src/winter_contest/src/Lidar/Lshapefitting/: Lshapefitting.hpp
(+9 files in other folders)
