<?xml version="1.0"?>
<package format="2">
  <name>lattice_test</name>
  <version>0.0.1</version>
  <description>Lattice planning visualization test node</description>

  <maintainer email="autonav@todo.todo">autonav</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>morai_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>morai_msgs</exec_depend>

</package>
