<?xml version="1.0"?>
<package format="2">
  <name>path_recorder</name>
  <version>0.0.0</version>
  <description>Record vehicle path in ENU and save to CSV.</description>

  <maintainer email="you@todo.todo">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>morai_msgs</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>geographic_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>morai_msgs</exec_depend>
  <exec_depend>geodesy</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
</package>